force-app/main/default/objects/BrillioFC__Unused_Dashboard__c/BrillioFC__Unused_Dashboard__c.object-meta.xml
<CustomObject>
    <label>Unused Dashboard</label>
    <nameField>
        <label>Unused Dashboard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unused Dashboards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>