force-app/main/default/objects/BrillioFC__Unused_Dashboard__c/fields/BrillioFC__DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__DeveloperName__c</fullName>
    <label>DeveloperName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>