force-app/main/default/objects/BrillioFC__Unused_Dashboard__c/fields/BrillioFC__isPackaged__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__isPackaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPackaged</label>
    <type>Checkbox</type>
</CustomField>