force-app/main/default/objects/BrillioFC__Unused_Dashboard__c/fields/BrillioFC__LastReferencedDate__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__LastReferencedDate__c</fullName>
    <label>LastReferencedDate</label>
    <type>Date</type>
</CustomField>