force-app/main/default/objects/BrillioFC__Unused_Dashboard__c/fields/BrillioFC__LastViewedDate__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__LastViewedDate__c</fullName>
    <label>LastViewedDate</label>
    <type>Date</type>
</CustomField>