force-app/main/default/objects/BrillioFC__Unused_Dashboard__c/fields/BrillioFC__Type__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Type__c</fullName>
    <label>Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>